--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
 
         <!--register        -->
         <activity android:name=".RegisterActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
 
         </activity>
@@ -27,11 +31,6 @@
         <activity
             android:name=".LoginActivity"
             android:label="Astrid Swim">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
 
         </activity>
 
@@ -47,6 +46,7 @@
             android:name=".SettingsActivity"
             android:label="Settings"
             android:parentActivityName=".SettingsActivity" />
+        <activity android:name=".ui.main.MessageActivity" />
     </application>
 
 </manifest>
