--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
     }
 }
 
+
+
+
 dependencies {
+    compile 'com.github.PuffoCyano:Range-Time-Picker-Dialog:v1.4'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0'
