--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <!--pagina de register        -->
         <activity
-            android:name=".PhoneConnection.UserPhoneRegister"
+            android:name="com.example.pupezaur.PhoneConnection.AdminPhoneRegister"
             android:label="Astrid Swim">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
